--- a/src/IdentityServer4.FreeSql/IdentityServer4.FreeSql.csproj
+++ b/src/IdentityServer4.FreeSql/IdentityServer4.FreeSql.csproj
@@ -10,7 +10,8 @@
     <RepositoryUrl>https://github.com/xinguisoft/IdentityServer4.FreeSql.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageIcon>10635672.png</PackageIcon>
-    <Version>1.1.0</Version>
+    <Version>1.1.1</Version>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
